fix(modal): Added parameter css (z-index: 999) so that the modal is above any element on the page

--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,7 @@ td.expense {
   opacity: 0;
   visibility: hidden;
   transition: 0.2s;
+  z-index: 1;
 }
 
 .modal-overlay.active {
